[tool.poetry]
name = "poetrip"
version = "0.1.0"
description = "Generate Pipfile from pyproject.toml"
license = "MIT"
authors = ["Joffrey Bienvenu <joffreybvn@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/joffreybvn/poetrip"
homepage = "https://github.com/joffreybvn/poetrip"
keywords = ['packaging', 'poetry', 'pipenv', 'pipfile']

[tool.poetry.scripts]
poetrip = "poetrip.cli:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.6.1"
toml = "^0.9"

[tool.poetry.dev-dependencies]
jupyter = "*"
pytest = "^3.0"
pytest-cov = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"